# welle.io_sekz

./: BEFORE_AFTER_COMPARISON.md  CMakeLists.txt  COMPONENT_TESTS_FIX_REPORT.md  E2E_TEST_SUITE_SUMMARY.md  FIXES_SUMMARY.txt  MERGE_RECOMMENDATION.md  MERGE_STATUS.md  PROJECT_STATUS.md  PULL_REQUEST_SUMMARY.md  QUICK_START.txt  run-e2e-tests.sh
src/tests/: CMakeLists.txt  test_framework.h
src/tests/e2e/: CMakeLists.txt  README.md  README_E2E_TESTS.md  README_EXPERT_VIEWS.md  README_SETTINGS_TESTS.md  TEST_COVERAGE_SUMMARY.md  TEST_COVERAGE_SUMMARY.txt  main_test_runner.cpp  test_components.cpp  test_components.cpp.BACKUP  test_expert_view.cpp  test_framework.cpp  test_framework.h  test_general_view.cpp  test_info_page.cpp  test_main_view.cpp  test_mot_view.cpp  test_radio_view.cpp  test_settings_pages.cpp  test_thai_components.cpp  test_thai_components.cpp.BACKUP
src/welle-gui/: radio_controller.cpp
